tests/application/authorization-settings/02-delete-application.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
  - apiVersion: skiperator.kartverket.no/v1alpha1
    kind: Application
    name: default
  - apiVersion: skiperator.kartverket.no/v1alpha1
    kind: Application
    name: allow-all
  - apiVersion: skiperator.kartverket.no/v1alpha1
    kind: Application
    name: allow-list
