tests/application/authorization-settings/patch-application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: allow-list
spec:
  image: image
  port: 8080
  authorizationSettings:
    allowList:
      - "/actuator/info"
      - "/actuator/shutdown"
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: allow-all
spec:
  image: image
  port: 8080
  authorizationSettings: null # if we don't set it to null, then it will just merge.
