tests/application/authorization-settings/multiple-application-assert.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: default-default-deny
spec:
  action: DENY
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
      to:
        - operation:
            paths:
              - /actuator*
  selector:
    matchLabels:
      app: default
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-list-default-deny
spec:
  action: DENY
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
      to:
        - operation:
            paths:
              - /actuator*
            notPaths:
              - /actuator/health
              - /actuator/info
  selector:
    matchLabels:
      app: allow-list
