tests/application/authorization-settings/multiple-application-errors.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-all-default-deny
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-all-allow-paths
