tests/application/authorization-settings/patch-application-assert.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-list-allow-paths
spec:
  rules:
    - to:
        - operation:
            paths:
              - /actuator/info
              - /actuator/shutdown
  selector:
    matchLabels:
      app: allow-list
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-list-default-deny
spec:
  action: DENY
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
      to:
        - operation:
            paths:
              - /actuator*
            notPaths:
              - /actuator/info
              - /actuator/shutdown
  selector:
    matchLabels:
      app: allow-list
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-all-default-deny
spec:
  action: DENY
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
      to:
        - operation:
            paths:
              - /actuator*
  selector:
    matchLabels:
      app: allow-all
