tests/application/authorization-settings/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: authorization-settings
spec:
  skip: false
  concurrent: true
  skipDelete: false
  steps:
    - try:
        - create:
            file: multiple-application.yaml
        - assert:
            file: multiple-application-assert.yaml
        - error:
            file: multiple-application-errors.yaml
    - try:
        - apply:
            file: patch-application.yaml
        - assert:
            file: patch-application-assert.yaml
        - error:
            file: patch-application-errors.yaml
    - try:
        - delete:
            apiVersion: skiperator.kartverket.no/v1alpha1
            kind: Application
            name: default
        - delete:
            apiVersion: skiperator.kartverket.no/v1alpha1
            kind: Application
            name: allow-all
        - delete:
            apiVersion: skiperator.kartverket.no/v1alpha1
            kind: Application
            name: allow-list
